@@ -31,7 +31,7 @@ README: README.md
 	- ./makeREADME.sh
 
 EXTRA_DIST = libqrencode.pc.in autogen.sh configure.ac acinclude.m4 \
-			 Makefile.am tests/Makefile.am qrencode.spec.in qrencode.spec \
+			 Makefile.am tests/Makefile.am \
 			 qrencode.1.in Doxyfile \
 			 CMakeLists.txt cmake/FindIconv.cmake 
 
